--- a/index.html
+++ b/index.html
@@ -1,164 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">  
-<head>  
-  <meta charset="UTF-8" />  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
-  <title>HJ Hacker999 Tool</title>  
-  <style>  
-    body {  
-      margin: 0;  
-      font-family: 'Courier New', monospace;  
-      background: black;  
-      color: #00ff00;  
-      overflow: hidden;  
-    }  
-    canvas {  
-      position: fixed;  
-      top: 0;  
-      left: 0;  
-      z-index: -1;  
-    }  
-    .container {  
-      display: flex;  
-      flex-direction: column;  
-      align-items: center;  
-      justify-content: center;  
-      height: 100vh;  
-      text-align: center;  
-    }  
-    input {  
-      padding: 10px;  
-      font-size: 18px;  
-      background: black;  
-      color: #00ff00;  
-      border: 2px solid #00ff00;  
-      outline: none;  
-      margin-bottom: 15px;  
-    }  
-    button {  
-      padding: 10px 20px;  
-      font-size: 18px;  
-      background: #00ffcc;  
-      border: none;  
-      cursor: pointer;  
-      display: flex;  
-      align-items: center;  
-      gap: 10px;  
-    }  
-    .message {  
-      margin-top: 10px;  
-      font-size: 20px;  
-    }  
-    .top-buttons {  
-      position: absolute;  
-      top: 20px;  
-      display: flex;  
-      gap: 15px;  
-    }  
-    .top-buttons img {  
-      width: 20px;  
-      height: 20px;  
-    }  
-    h1.glow {  
-      animation: glow 2s ease-in-out infinite alternate;  
-    }  
-    @keyframes glow {  
-      from {  
-        text-shadow: 0 0 5px #0f0, 0 0 10px #0f0;  
-      }  
-      to {  
-        text-shadow: 0 0 20px #0f0, 0 0 30px #0f0;  
-      }  
-    }  
-  </style>  
-</head>  
-<body>  
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HJ Hacker999 Tool</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Courier New', monospace;
+      background: black;
+      color: #00ff00;
+      overflow-y: auto;
+    }
 
-<!-- 🔊 Sound Effect -->
-<audio id="unlockSound" src="https://www.soundjay.com/button/sounds/button-16.mp3" preload="auto" muted></audio>
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
 
-<canvas id="matrix"></canvas>
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 30px 10px;
+      text-align: center;
+    }
 
-<!-- 🔐 Login Section -->
-<div class="container" id="loginContainer">  
-  <h2>Access Verification</h2>  
-  <input type="password" id="accessKey" placeholder="Enter Access Key..." />  
-  <button onclick="checkKey()">🔓 Unlock Tool</button>  
-  <div class="message" id="message"></div>  
-</div>  
+    input {
+      padding: 10px;
+      font-size: 18px;
+      background: black;
+      color: #00ff00;
+      border: 2px solid #00ff00;
+      outline: none;
+      margin-bottom: 15px;
+    }
 
-<!-- ✅ Dashboard -->
-<div class="container" id="dashboardContainer" style="display:none;">  
-  <div class="top-buttons">  
-    <button onclick="window.open('https://t.me/Harisjutt999', '_blank')">  
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" /> Telegram  
-    </button>  
-    <button onclick="window.open('https://wa.me/923035481601', '_blank')">  
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" /> WhatsApp  
-    </button>  
-  </div>  
-  <h1 class="glow">✅ Welcome to the HJ Hacker999 Tool</h1>  
-  <p>Access Level: Admin</p>  
-  <p>Fetching target files...</p>  
-  <p>Uploading payload...</p>  
-  <p>System Breached ✅</p>  
-  <div style="margin-top: 30px;">  
-    <!-- 🔗 Your custom tool link -->
-    <button onclick="window.open('https://simsownerdetails.net.pk/', '_blank')">🛠️ Use Tool</button>  
-  </div>  
-</div>  
+    button {
+      padding: 10px 20px;
+      font-size: 18px;
+      background: #00ffcc;
+      border: none;
+      cursor: pointer;
+      margin: 5px;
+    }
 
-<script>  
-  // 💻 Matrix Animation
-  const canvas = document.getElementById('matrix');  
-  const ctx = canvas.getContext('2d');  
-  canvas.height = window.innerHeight;  
-  canvas.width = window.innerWidth;  
-  const chars = '01';  
-  const fontSize = 14;  
-  const columns = canvas.width / fontSize;  
-  const drops = Array(Math.floor(columns)).fill(1);  
+    .message {
+      margin-top: 10px;
+      font-size: 20px;
+    }
 
-  function drawMatrix() {  
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';  
-    ctx.fillRect(0, 0, canvas.width, canvas.height);  
-    ctx.fillStyle = '#0F0';  
-    ctx.font = fontSize + 'px monospace';  
-    for (let i = 0; i < drops.length; i++) {  
-      const text = chars.charAt(Math.floor(Math.random() * chars.length));  
-      ctx.fillText(text, i * fontSize, drops[i] * fontSize);  
-      if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {  
-        drops[i] = 0;  
-      }  
-      drops[i]++;  
-    }  
-  }  
-  setInterval(drawMatrix, 33);  
+    .top-buttons {
+      display: flex;
+      gap: 15px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
 
-  // 🔐 Check Key & Play Sound
-  function checkKey() {  
-    const correctKey = "HJ Hacker999";  
-    const userKey = document.getElementById('accessKey').value;  
-    const message = document.getElementById('message');  
-    const sound = document.getElementById('unlockSound');  
+    .top-buttons button {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
-    if (userKey === correctKey) {  
-      document.getElementById('loginContainer').style.display = 'none';  
-      document.getElementById('dashboardContainer').style.display = 'flex';  
+    .top-buttons img {
+      width: 20px;
+      height: 20px;
+    }
 
-      // 🔊 Play Sound
-      sound.muted = false;  
-      sound.volume = 1.0;  
-      sound.play().catch((e) => {
-        console.warn("Sound error:", e);
-      });
+    h1.glow {
+      animation: glow 2s ease-in-out infinite alternate;
+    }
 
-    } else {  
-      message.style.color = 'red';  
-      message.innerText = '❌ Invalid Key';  
-    }  
-  }  
-</script>  
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 5px #0f0, 0 0 10px #0f0;
+      }
+      to {
+        text-shadow: 0 0 20px #0f0, 0 0 30px #0f0;
+      }
+    }
 
-</body>  
-</html>
+    .tools {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <audio id="unlockSound" src="https://www.soundjay.com/button/sounds/button-16.mp3" preload="auto" muted></audio>
+  <canvas id="matrix"></canvas>
+
+  <!-- 🔐 Login -->
+  <div class="container" id="loginContainer">
+    <h2>Access Verification</h2>
+    <input type="password" id="accessKey" placeholder="Enter Access Key..." />
+    <button onclick="checkKey()">🔓 Unlock Tool</button>
+    <div class="message" id="message"></div>
+  </div>
+
+  <!-- ✅ Dashboard -->
+  <div class="container" id="dashboardContainer" style="display:none;">
+    <div class="top-buttons">
+      <button onclick="window.open('https://t.me/Harisjutt999', '_blank')">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" /> Telegram
+      </button>
+      <button onclick="window.open('https://wa.me/923035481601', '_blank')">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" /> WhatsApp
+      </button>
+    </div>
+
+    <h1 class="glow">✅ Welcome to the HJ Hacker999 Tool</h1>
+    <p>Access Level: Admin</p>
+    <p>Fetching target files...</p>
+    <p>Uploading payload...</p>
+    <p>System Breached ✅</p>
+
+    <div class="tools">
+      <button onclick="window.open('https://chat.tgbot.co')">Tool No. 1</button>
+      <button onclick="window.open('https://chat.theb.ai')">Tool No. 2</button>
+      <button onclick="window.open('https://freechatgpt.chat')">Tool No. 3</button>
+      <button onclick="window.open('https://fastgpt.app')">Tool No. 4</button>
+      <button onclick="window.open('https://freegpt.cc')">Tool No. 5</button>
+      <button onclick="window.open('https://freegpt.one')">Tool No. 6</button>
+      <button onclick="window.open('https://chatgpt.ddiu.me')">Tool No. 7</button>
+      <button onclick="window.open('https://chat.ninvfeng.xyz')">Tool No. 8</button>
+      <button onclick="window.open('https://www.aitoolgpt.com')">Tool No. 9</button>
+      <button onclick="window.open('https://www.chatsverse.xyz')">Tool No. 10</button>
+      <button onclick="window.open('https://chatforai.com')">Tool No. 11</button>
+      <button onclick="window.open('http://cutt.ly/AePjF2xl')">Tool No. 12</button>
+      <button onclick="window.open('https://desk.im')">Tool No. 13</button>
+      <button onclick="window.open('https://ai.ls')">Tool No. 14</button>
+      <button onclick="window.open('https://ai.ci')">Tool No. 15</button>
+      <button onclick="window.open('https://talk.xiu.ee')">Tool No. 16</button>
+      <button onclick="window.open('http://cutt.ly/AePjF2xl')">Tool No. 17</button>
+      <button onclick="window.open('https://www.scyu.app')">Tool No. 18</button>
+      <button onclick="window.open('https://www.chat2ai.cn')">Tool No. 19</button>
+      <button onclick="window.open('https://aigcfun.com')">Tool No. 20</button>
+      <button onclick="window.open('https://t.me/AnonCyberWarrior')">Tool No. 21</button>
+      <button onclick="window.open('https://chat.forchange.cn')">Tool No. 22</button>
+      <button onclick="window.open('https://94gpt.com')">Tool No. 23</button>
+      <button onclick="window.open('https://chat.yqcloud.top')">Tool No. 24</button>
+      <button onclick="window.open('https://ai117.com')">Tool No. 25</button>
+      <button onclick="window.open('https://chat.zecoba.cn')">Tool No. 26</button>
+      <button onclick="window.open('https://ai.yiios.com')">Tool No. 27</button>
+      <button onclick="window.open('https://xc.com')">Tool No. 28</button>
+      <button onclick="window.open('https://chat.paoying.net')">Tool No. 29</button>
+      <button onclick="window.open('https://ai-toolbox.codefuture.top')">Tool No. 30</button>
+    </div>
+  </div>
+
+  <script>
+    const canvas = document.getElementById('matrix');
+    const ctx = canvas.getContext('2d');
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+    const chars = '01';
+    const fontSize = 14;
+    const columns = canvas.width / fontSize;
+    const drops = Array(Math.floor(columns)).fill(1);
+
+    function drawMatrix() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = '#0F0';
+      ctx.font = fontSize + 'px monospace';
+      for (let i = 0; i < drops.length; i++) {
+        const text = chars.charAt(Math.floor(Math.random() * chars.length));
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
+    }
+
+    setInterval(drawMatrix, 33);
+
+    function checkKey() {
+      const correctKey = "HJ Hacker999";
+      const userKey = document.getElementById('accessKey').value;
+      const message = document.getElementById('message');
+      const sound = document.getElementById('unlockSound');
+
+      if (userKey === correctKey) {
+        document.getElementById('loginContainer').style.display = 'none';
+        document.getElementById('dashboardContainer').style.display = 'flex';
+
+        sound.muted = false;
+        sound.volume = 1.0;
+        sound.play().catch((e) => {
+          console.warn("Sound error:", e);
+        });
+      } else {
+        message.style.color = 'red';
+        message.innerText = '❌ Invalid Key';
+      }
+    }
+  </script>
+</body>
+                                                                        </html>
